--- a/vote.html
+++ b/vote.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf8" >
@@ -7,7 +8,7 @@
 <h1>オンライン投票</h1>
 
 <form action="vote.php" method="post">
-<table>
+<table style="text-align:right;">
   <tr>
     <td>小泉首相</td>
     <td><input type="radio" name="vote" value="0"></td>
